samples/_failures_safe/1761649495_b1e29f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0b2a822.c: In function ‘main’:
./samples/SAFE/__tmp_b0b2a822.c:154:5: error: expected declaration or statement at end of input
  154 |     printf("\n");
      |     ^~~~~~
